# oxjest

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  README.md  biome.json  jest.config.mjs  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
.changeset/: brave-spiders-knock.md  cold-boxes-enter.md  config.json  early-rocks-do.md  eighty-humans-relate.md  empty-colts-add.md  few-dancers-pump.md  fresh-buses-take.md  fruity-steaks-hope.md  icy-walls-dig.md  new-lizards-make.md  sad-mangos-do.md  salty-dolls-greet.md  seven-toes-grow.md  shy-files-learn.md  tender-jeans-search.md  thin-hounds-camp.md  tough-foxes-wash.md  two-weeks-own.md  wet-shirts-cough.md  wet-swans-type.md  yummy-houses-arrive.md
.github/workflows/: ci.yaml  publish.yaml  release.yaml
src/: jest.rs  lib.rs  loader.rs  testing.rs  transform.rs
src-ts/: index.ts  runtime.ts
src/pass/: convert_mocks.rs  dynamic_imports.rs  hoist_mocks.rs  import_actual.rs  inject_globals.rs  mod.rs
src/snapshots/: oxjest__transform__tests__doMock.test.ts.snap  oxjest__transform__tests__greeter.ts.snap  oxjest__transform__tests__requireActual.test.ts.snap  oxjest__transform__tests__runtime.test.ts.snap  oxjest__transform__tests__simple.test.ts.snap
tests/: doMock.test.ts  greeter.ts  requireActual.test.ts  runtime.test.ts  simple.test.ts
