[package]
name = "oxjest"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
napi = "3.1.3"
napi-derive = "3.1.1"
oxc_sourcemap = "4.0.3"
oxc_traverse = "0.78.0"

[dependencies.oxc]
version = "0.78.0"
features = ["ast_visit", "codegen", "semantic", "transformer"]

[build-dependencies]
napi-build = "2.2.3"

[dev-dependencies]
insta = "1.43.1"
test_each_file = "0.3.5"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
