[package]
name = "oxjest"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
napi = "3.3.0"
napi-derive = "3.2.5"
oxc_sourcemap = "6.0.0"
oxc_traverse = "0.95.0"

[dependencies.oxc]
version = "0.95.0"
features = ["ast_visit", "codegen", "semantic", "transformer"]

[build-dependencies]
napi-build = "2.2.3"

[dev-dependencies]
insta = "1.43.2"
test_each_file = "0.3.6"

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3
